maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: not found: value breakable
    breakable {if (aBiscuit(i,j)){
    ^ShortestPathMaze:9: error: not found: type break
      loop:break
           ^ShortestPathMaze:9: error: not found: value loop
      loop:break
      ^ShortestPathMaze:13: error: value unary_! is not a member of Unit
  while(!isGridFull){
        ^ShortestPathMaze:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^ShortestPathMaze:40: warning: enclosing method isGridFull has result type Unit: return value discarded
      return false
      ^ShortestPathMaze:43: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return true
         ^ShortestPathMaze:43: warning: enclosing method isGridFull has result type Unit: return value discarded
  return true
  ^